# acvm-backend-barretenberg

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MIT-LICENSE  README.md  build.rs  cspell.json  download-bb-binary-for_specific-platform.sh  download-bb-binary.sh  flake.nix  index.js  index.mjs  package-lock.json  package.json  wasm-bindgen-cli.nix  webdriver.json
.cargo/: config.toml
.github/workflows/: publish.yml  release.yml  rust.yml  test.yml  wasm.yml
.github/workflows/pkg/: aztec_backend.js  aztec_backend_bg.wasm.d.ts
acvm_backend_barretenberg/: Cargo.toml
acvm_backend_barretenberg/src/: blake2s.rs  composer.rs  crs.rs  lib.rs  merkle.rs  pedersen.rs  pippenger.rs  recursion.rs  scalar_mul.rs  schnorr.rs
acvm_backend_barretenberg/src/acvm_interop/: mod.rs  proof_system.rs  pwg.rs  smart_contract.rs
acvm_backend_barretenberg/src/acvm_interop/pwg/: black_box_functions.rs  merkle.rs
acvm_backend_barretenberg/src/barretenberg/: mod.rs  native.rs  wasm.rs
aztec_backend_wasm/: Cargo.toml  README.md  build-aztec-backend-wasm
aztec_backend_wasm/src/: js_transforms.rs  lib.rs
barretenberg-sys/: Cargo.toml  build.rs
barretenberg-sys/.cargo/: config.toml
barretenberg-sys/src/: blake2s.rs  composer.rs  lib.rs  pedersen.rs  pippenger.rs  schnorr.rs
barretenberg_browser_stopgap_wasm/: Cargo.toml  README.md
barretenberg_browser_stopgap_wasm/src/: lib.rs
barretenberg_js/: Cargo.toml
barretenberg_js/src/: lib.rs
barretenberg_js/src/acvm_interop/: mod.rs  proof_system.rs  pwg.rs  smart_contract.rs
barretenberg_static_lib/: Cargo.toml
barretenberg_static_lib/src/: blake2s.rs  composer.rs  crs.rs  integration.rs  lib.rs  pedersen.rs  pippenger.rs  scalar_mul.rs  schnorr.rs
barretenberg_static_lib/src/acvm_interop/: contract.sol  mod.rs  proof_system.rs  pwg.rs  smart_contract.rs
barretenberg_static_lib/src/acvm_interop/pwg/: black_box_functions.rs  gadget_call.rs  merkle.rs
barretenberg_wasm/: Cargo.toml  README.md  build.rs
barretenberg_wasm/src/: barretenberg.wasm  blake2s.rs  composer.rs  lib.rs  pedersen.rs  pippenger.rs  scalar_mul.rs  schnorr.rs
barretenberg_wasm/src/acvm_interop/: mod.rs  proof_system.rs  pwg.rs  smart_contract.rs
barretenberg_wasm/src/acvm_interop/pwg/: black_box_functions.rs  gadget_call.rs  merkle.rs
common/: Cargo.toml  rust-analyzer.json
common/src/: barretenberg_structures.rs  black_box_functions.rs  contract.sol  crs.rs  gadget_caller.rs  lib.rs  merkle.rs  proof.rs  serialiser.rs  serializer.rs
common/src/contract/: turbo_verifier.rs
common/src/contract/cryptography/: mod.rs  pairings_bn254.rs  polynomial_eval.rs  transcript.rs  types.rs
nix/wasm-pack/: default.nix
pkg/: aztec_backend.d.ts  aztec_backend.js  aztec_backend_bg.wasm.d.ts  package.json
src/: barretenberg_shim.rs  barretenberg_structures.rs  common_reference_string.rs  composer.rs  crs.rs  crs_parse.rs  lib.rs  merkle.rs  pedersen.rs  pippenger.rs  proof_system.rs  pwg.rs  recursion.rs  scalar_mul.rs  schnorr.rs  smart_contract.rs
src/acvm_interop/: common_reference_string.rs  contract.sol  info.rs  mod.rs  proof_system.rs  pwg.rs  reference_string.rs  smart_contract.rs
src/acvm_interop/pwg/: gadget_call.rs  merkle.rs
src/barretenberg/: barretenberg.wasm  composer.rs  crs.rs  mod.rs  pedersen.rs  pippenger.rs  scalar_mul.rs  schnorr.rs
src/barretenberg_rs/: composer.rs  crs.rs  grumpkin.rs  mod.rs  pedersen.rs  schnorr.rs
src/barretenberg_wasm/: barretenberg.wasm  blake2s.rs  composer.rs  mod.rs  pedersen.rs
src/bb/: contract.rs  gates.rs  mod.rs  prove.rs  prove_and_verify.rs  verify.rs  write_vk.rs
src/black_box_solver/: mod.rs  pedersen.rs  scalar_mul.rs  schnorr.rs
src/contract/: turbo_verifier.rs
src/contract/cryptography/: polynomial_eval.rs  transcript.rs  types.rs
src/grumpkin/: interop_tests.rs  mod.rs
src/serialiser/: mod.rs
test/: simple.test.js
ws/barretenberg_js/src/acvm_interop/: proof_system.rs
ws/barretenberg_js/src/acvm_interop/pwg/: gadget_call.rs
ws/barretenberg_static_lib/src/acvm_interop/: smart_contract.rs
ws/barretenberg_wasm/src/: lib.rs
ws/common/: Cargo.toml
ws/common/src/: crs.rs  lib.rs  merkle.rs
