[package]
name = "acvm-backend-barretenberg"
description = "An ACVM backend which allows proving/verifying ACIR circuits against Aztec Lab's Barretenberg library."
version = "0.11.0"
authors = ["The Noir Team <team@noir-lang.org>"]
edition = "2021"
rust-version = "1.66"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
acvm = { version = "0.22.0", features = ["bn254"] }
thiserror = "1.0.21"
base64 = "0.21.2"

tempfile = "3.6.0"

# Native
barretenberg-sys = { version = "0.2.0", optional = true }

# Wasm
getrandom = { version = "0.2", optional = true }
rust-embed = { version = "6.6.0", optional = true, features = [
    "debug-embed",
    "interpolate-folder-path",
    "include-exclude",
] }
wasmer = { version = "3.3", optional = true }

[build-dependencies]
dirs = "5.0.1"
build-target = "0.4.0"
pkg-config = "0.3"
const_format = "0.2.30"
tar = "~0.4.15"
flate2 = "~1.0.1"
reqwest = { version = "0.11.16", default-features = false, features = [
    "rustls-tls",
    "blocking",
] }
tempdir = "0.3.7"

[features]
default = ["native"]
native = ["dep:barretenberg-sys"]
wasm = ["dep:wasmer", "dep:rust-embed", "dep:getrandom"]
