[package]
name = "acvm-backend-barretenberg"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.9.1"
common = { path = "../common", default-features = false }

# Native
# barretenberg-sys = { version = "0.1.2", optional = true }
barretenberg-sys = { git = "https://github.com/noir-lang/barretenberg-sys.git", branch = "mv/recursion-bindings", optional = true }

# Wasm
wasmer = { version = "*", optional = true, default-features = false }
rust-embed = { version = "6.6.0", optional = true, features = ["debug-embed", "interpolate-folder-path", "include-exclude"] }
getrandom = { version = "0.2", optional = true }

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
tempfile = "*"

[features]
default = ["native"]
native = [
    "dep:barretenberg-sys",
    "common/std",
]
wasm = [
    "wasmer",
    "dep:rust-embed",
    "dep:getrandom",
    "common/std",
    "wasmer/sys-default",
    "wasmer/cranelift",
    "wasmer/default-compiler",
    "wasmer/default-cranelift",
    "wasmer/default-universal",
]
js = [
    "wasmer",
    "dep:rust-embed",
    "dep:getrandom",
    "wasmer/js-default",
]
