[package]
name = "aztec_backend_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
barretenberg_wasm = { path = "../barretenberg_wasm", default-features = false, features = [
    "js",
] }
common = { path = "../common", default-features = false }
console_error_panic_hook = { version = "*" }
wasm-bindgen = { version = "*", features = ["serde-serialize"] }
js-sys = { version = "0.3.61" }
gloo-utils = { version = "0.1", features = ["serde"] }
serde_json = "1.0.94"