[package]
name = "barretenberg-sys"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
hex = "0.4.2"

[build-dependencies]
bindgen = "0.64.0"
color-eyre = "0.6.2"
pkg-config = "0.3"
thiserror = "1.0.21"
