[package]
name = "barretenberg_js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acvm = { git = "https://github.com/noir-lang/noir", features = ["bn254"] }
common = { path = "../common" }
tempfile = "3.3.0"
