[package]
name = "barretenberg_static_lib"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

common = { path = "../common" }
# barretenberg-sys = "0.1.1"
barretenberg-sys = { git = "https://github.com/noir-lang/barretenberg-sys.git", branch = "mv/recursion-bindings" }

[dev-dependencies]
blake2 = "0.9.1"
tempfile = "*"