[package]
name = "barretenberg_wasm"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = { version = "*", default-features = false }
common = { path = "../common", default-features = false }
js-sys = { version = "0.3.55", optional = true }

[dev-dependencies]
blake2 = "0.9.1"
tempfile = "*"

[features]
default = [
    # "acvm/bn254",
    "common/std",
    "wasmer/sys-default",
    "wasmer/cranelift",
    "wasmer/default-compiler",
    "wasmer/default-cranelift",
    "wasmer/default-universal",
]
js = [

    # "acvm/bn254",
    "wasmer/js-default",
    "js-sys"
]
