[package]
name = "barretenberg_wasm"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasmer = { version = "*", default-features = false }
common = { path = "../common", default-features = false }
rust-embed = { version = "6.6.0", features = ["debug-embed", "interpolate-folder-path", "include-exclude"] }
getrandom = { version = "0.2" }
js-sys = { version = "*", optional = true }
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"], optional = true }

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
blake2 = "0.9.1"
tempfile = "*"

[features]
default = [
    "common/std",
    "wasmer/sys-default",
    "wasmer/cranelift",
    "wasmer/default-compiler",
    "wasmer/default-cranelift",
    "wasmer/default-universal",
]
js = [
    "dep:js-sys",
    "dep:wasm-bindgen",
    "getrandom/js",
    "wasmer/js-default",
    "common/js"
]
