[package]
name = "common"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acvm = { version = "0.9.0", features = ["bn254"] }

sled = "0.34.6"
blake2 = "0.9.1"
dirs = { version = "3.0", optional = true }
reqwest = { version = "0.11.16", optional = true, default-features = false, features = ["stream", "rustls-tls"] }
futures-util = { version = "0.3.14", optional = true }
indicatif = { version = "0.17.3", optional = true }
pollster = "0.3.0"

[features]
default = ["std"]
std = ["dep:reqwest", "dep:futures-util", "dep:dirs", "dep:indicatif"]
